--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "private": true,
+  "homepage": "https://your-username.github.io/your-repo-name",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -35,6 +36,7 @@
     "@types/node": "^17.0.18",
     "@types/react": "^17.0.39",
     "autoprefixer": "^10.2.6",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.3.5",
     "rehype": "12.0.0",
     "rehype-autolink-headings": "6.1.1",
